--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,150 +1,93 @@
-aiofiles==22.1.0
-aiosqlite==0.18.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+altair==4.2.2
 asttokens==2.2.1
 attrs==22.2.0
-Babel==2.11.0
 backcall==0.2.0
-bcc==0.12.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.2
-bleach==6.0.0
-blinker==1.4
+blinker==1.5
 branca==0.6.0
-Brlapi==0.7.0
-certifi==2019.11.28
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.0.1
-chrome-gnome-shell==0.0.0
-Click==7.0
-colorama==0.4.3
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
 comm==0.1.2
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
+cramjam==2.6.2
 debugpy==1.6.6
 decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-distlib==0.3.6
-distro==1.4.0
-entrypoints==0.3
+entrypoints==0.4
 executing==1.2.0
-fastjsonschema==2.16.2
-filelock==3.9.0
+fastparquet==2023.2.0
 folium==0.14.0
-hidpidaemon==18.4.6
-httplib2==0.14.0
-idna==2.8
+fsspec==2023.3.0
+future==0.18.3
+geocoder==1.38.1
+geographiclib==2.0
+geopy==2.3.0
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.12.0
-ipykernel==6.21.2
-ipython==8.10.0
-ipython-genutils==0.2.0
+ipykernel==6.21.3
+ipython==8.11.0
 jedi==0.18.2
 Jinja2==3.1.2
-json5==0.9.11
+joblib==1.2.0
 jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter-ydoc==0.2.2
 jupyter_client==8.0.3
 jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_fileid==0.7.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.6.1
-jupyterlab==3.6.1
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.19.0
-kernelstub==3.1.4
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.12.0
-macaroonbakery==1.3.1
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
-mistune==2.0.5
-nbclassic==0.5.2
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
+mdurl==0.1.2
 nest-asyncio==1.5.6
-netaddr==0.7.19
-netifaces==0.10.4
-notebook==6.5.2
-notebook_shim==0.2.2
 numpy==1.24.2
-oauthlib==3.1.0
 packaging==23.0
-pandocfilters==1.5.0
+pandas==1.5.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.4.0
 pkgutil_resolve_name==1.3.10
-platformdirs==3.0.0
-pop-transition==1.1.2
-prometheus-client==0.16.0
-prompt-toolkit==3.0.37
-protobuf==3.6.1
+platformdirs==3.1.1
+prompt-toolkit==3.0.38
+protobuf==3.20.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pycairo==1.16.2
-pycparser==2.21
-pycups==1.9.73
-pydbus==0.6.0
+pyarrow==11.0.0
+pydeck==0.8.0
 Pygments==2.14.0
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
+Pympler==1.0.1
 pyrsistent==0.19.3
-python-apt===2.1.2pop0-1587756471-20.04-cd2988e
 python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-json-logger==2.0.7
-python-xlib==0.23
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.0
-repoman==1.2.2
+ratelim==0.1.6
 requests==2.28.2
-requests-unixsocket==0.2.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-Send2Trash==1.8.0
-sessioninstaller==0.0.0
-simplejson==3.16.0
-six==1.14.0
-sniffio==1.3.0
+rich==13.3.2
+scikit-learn==1.2.2
+scipy==1.10.1
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
 soupsieve==2.4
 stack-data==0.6.2
-systemd-python==234
-terminado==0.17.1
-tinycss2==1.2.1
-tomli==2.0.1
+streamlit==1.20.0
+streamlit-folium==0.11.1
+streamlit-option-menu==0.3.2
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
 tornado==6.2
 traitlets==5.9.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-urllib3==1.25.8
-virtualenv==20.19.0
-wadllib==1.3.3
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.15
+validators==0.20.0
+watchdog==2.3.1
 wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.5.1
-xkit==0.0.0
-y-py==0.5.9
-ypy-websocket==0.8.4
-zipp==3.14.0
+zipp==3.15.0
