--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,13 +12,16 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 comm==0.1.2
+contourpy==1.0.7
 cramjam==2.6.2
+cycler==0.11.0
 debugpy==1.6.6
 decorator==5.1.1
 entrypoints==0.4
 executing==1.2.0
 fastparquet==2023.2.0
 folium==0.14.0
+fonttools==4.39.0
 fsspec==2023.3.0
 future==0.18.3
 geocoder==1.38.1
@@ -37,8 +40,10 @@ joblib==1.2.0
 jsonschema==4.17.3
 jupyter_client==8.0.3
 jupyter_core==5.2.0
+kiwisolver==1.4.4
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 nest-asyncio==1.5.6
@@ -60,6 +65,7 @@ pyarrow==11.0.0
 pydeck==0.8.0
 Pygments==2.14.0
 Pympler==1.0.1
+pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.7.1
@@ -70,6 +76,7 @@ requests==2.28.2
 rich==13.3.2
 scikit-learn==1.2.2
 scipy==1.10.1
+seaborn==0.12.2
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
